# scriptyscripts

./: .gitignore  README.md  pyproject.toml  scriptyscripts.sublime-project  scriptyscripts.sublime-workspace  setup.py
scriptyscripts/: cli.py
scriptyscripts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scriptyscripts/scripts/: generate-scriptyscripts-completions.sh  upgrade_pipx.sh
scriptyscripts/tools/: interactive_pager.py
tests/: test_cli.py
